--- a/src/NewTodoForm.css
+++ b/src/NewTodoForm.css
@@ -1,49 +1,41 @@
 .Form-Container {
-    position: absolute;
-    top: 50px;
-    width: 300px;
-    height: 250px;
-    overflow-y: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
     box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.15);
     border-radius: 12px;
+    background-color: white;
 }
 
 .Form {
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
 }
 
 .Input {
-    height: 50px;
-    width: 50%;
+    height: 100%;
     margin: 10px;
     padding: 5px 0 5px 20px;
     font-size: 20px;
     font-weight: 300;
-    border: 0px solid black;
+    border: none;
     border-radius: 12px;
+    outline: none;
 }
 
-.Plus {
-    right: 30px;
-    bottom: 65px;
-    height: 70px;
-    width: 70px;
+.Plus-button {
+    height: 60px;
+    width: 60px;
     background-color: white;
     color: #e56a77;
+    /* color: white; */
     border: none;
     margin: 10px;
     padding: 5px 0 5px 5px;
     transition: transform 0.2s ease;
 }
-.Plus:active {
+.Plus-button:active {
     color: #b23946;
 }
-.Plus:hover {
+.Plus-button:hover {
     transform: scale(1.1);
 }
 
