--- a/src/Todo.css
+++ b/src/Todo.css
@@ -1,35 +1,95 @@
-.Todo-Completion {
-    text-decoration: line-through;
-    opacity: 0.5;
-}
-
-.Todo-container {
-    position: relative;
-}
-
-.Todo-inner-container {
-    display: flex;
-    justify-content: space-around;
-}
-
 .Todo {
+    display: flex;
+    margin: 0 -3rem 5px;
+    padding: 1.1rem 2rem;
+    justify-content: space-between;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.Todo-task {
     position: relative;
-    border-bottom: 1px solid rgb(234, 234, 234);
-    margin: 5px 40px 5px 40px;
-    width: 100%;
-    height: 100%;
-    /* min-height: 50px; */
-    font-size: 22px;
+    /* border-bottom: 1px solid rgb(234, 234, 234); */
+    font-size: 20px;
     font-weight: 300;
-    color: rgba(66, 66, 66, 0.39);
+    color: white;
+    transition: opacity 0.4s linear;
+}
+
+.Todo-task.Todo-Completion {
+    opacity: 0.6;
+}
+
+.Todo-task.Todo-Completion:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -0.5rem;
+    display: block;
+    width: 0%;
+    height: 2px;
+    background: #fff;
+    animation: strikeitem 0.5s ease-out 0s forwards;
+}
+
+@keyframes strikeitem {
+    to {
+        width: calc(100% + 1rem);
+    }
 }
 
 .Todo-buttons {
-    width: 100%;
+    flex-shrink: 0;
+    padding-left: 0.7em;
 }
 
-/* .TodoList-outside-container {
-    display: flex;
-    border-bottom: 1px solid black;
-} */
+.Todo-buttons button {
+    border: none;
+    font-size: 1em;
+    background: none;
+    cursor: pointer;
+    color: #fff;
+    margin: 0 0.4rem;
+}
 
+.Todo-edit-form {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.Todo-edit-form label {
+    min-width: 100%;
+    margin-bottom: 0.5rem;
+    font-size: 1.3rem;
+}
+
+.Todo-edit-form input {
+    flex-grow: 1;
+    border: none;
+    background: #f7f1f1;
+    padding: 0 1.5em;
+    font-size: initial;
+}
+
+.Todo-edit-form button {
+    padding: 0 1.3rem;
+    border: none;
+    color: white;
+    background: #ff6666;
+    font-weight: bold;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    margin-left: 5px;
+    cursor: pointer;
+    transition: transform 0.2s ease ;
+}
+
+.Todo-edit-form button:hover {
+    /* background: #ff5e5e; */
+    transform: scale(1.05);
+}
+
+.Todo-edit-form input,
+.Todo-edit-form button {
+    font-family: 'Quicksand', sans-serif;
+    height: 3rem;
+}
