--- a/src/Todo.css
+++ b/src/Todo.css
@@ -4,17 +4,22 @@
     padding: 1.1rem 2rem;
     justify-content: space-between;
     align-items: center;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.35);
 }
 
 .Todo-task {
     position: relative;
     /* border-bottom: 1px solid rgb(234, 234, 234); */
     font-size: 20px;
-    font-weight: 300;
+    font-weight: bold;
     color: white;
     transition: opacity 0.4s linear;
+    transition: transform 0.4s ease;
 }
+
+/* .Todo-task:hover {
+    transform: scale(1.09);
+} */
 
 .Todo-task.Todo-Completion {
     opacity: 0.6;
@@ -50,6 +55,11 @@
     cursor: pointer;
     color: #fff;
     margin: 0 0.4rem;
+    transition: transform 0.2s ease;
+}
+
+.Todo-buttons button:hover {
+    transform: scale(1.3);
 }
 
 .Todo-edit-form {
@@ -85,7 +95,11 @@
 
 .Todo-edit-form button:hover {
     /* background: #ff5e5e; */
-    transform: scale(1.05);
+    transform: scale(1.06);
+}
+
+.Todo-edit-form button:active {
+    background: #b23946;
 }
 
 .Todo-edit-form input,
